--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                 <label for="files" class=" fa fa-camera " style="font-size: 35px; z-index: 1; position: absolute; top: 33%; left: 52%;"></label>
             </div>
     
-            <input class="name" type="text" placeholder="Name" name="Name" required></input>
-            <input class="email" type="email" placeholder="Email" name="Email" required></input>
-            <input class="password" type="password" placeholder="Password" name="Password" required></input>
+            <input class="name" type="text" placeholder="Name" name="Name" required autocomplete="username"></input>
+            <input class="email" type="email" placeholder="Email" name="Email" required autocomplete="email"></input>
+            <input class="password" type="password" placeholder="Password" name="Password" required autocomplete="new-password"></input>
             <div id="message">Type Password</div>
-            <input class="confirmPassword" type="password" placeholder="Confirm Password" name="confirmPassword" required></input>
+            <input class="confirmPassword" type="password" placeholder="Confirm Password" name="confirmPassword" required autocomplete="new-password"></input>
             <!-- <div class="otp-verification">
             <input class="otpInput" type="text" placeholder="Disabled" readonly ></input>
             <div id="otp-count">Click to Verify Email</div>
