--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
             <div id="changeImg">
                <img id="uploadedImg" src="paris.jpeg" style="z-index: -1;" > 
-               <label for="files" class=" fa fa-camera " style="font-size: 35px; z-index: 1; position: absolute; top: 33%; left: 52%;"></label>
+               <label for="files" class=" fa fa-camera " style="font-size: 200%; z-index: 1; position: absolute; top: 33%; left: 52%;"></label>
             </div>
             <input id="name" type="text" placeholder="Name" name="Name" required autocomplete="username"></input>
             <input id="email" type="email" placeholder="Email" name="Email" required autocomplete="email"></input>
